overflow hidden issue

--- a/src/component/HeaderTopBar/HeaderTopBar.style.scss
+++ b/src/component/HeaderTopBar/HeaderTopBar.style.scss
@@ -75,6 +75,12 @@
       button[data-action="start"] {
         display: none;
       }
+      .tns-liveregion{
+        display: none;
+      }
+      .tns-ovh{
+        overflow: hidden;
+      }
     }
   }
 
